# rust-patent-protector

./: .dockerignore  README.md
backend/: Cargo.toml  Dockerfile  diesel.toml  migration.Dockerfile
backend/migrations/2024-11-19-043745_create_test_logs_table/: down.sql  up.sql
backend/migrations/2024-11-23-221943_create_assessment_table/: down.sql  up.sql
backend/src/: main.rs
backend/src/controllers/: mod.rs
backend/src/controllers/assessment/: ctrl.rs  mod.rs
backend/src/controllers/assessment/dtos/: create_assessment_v1.rs  mod.rs
backend/src/controllers/gpt/: ctrl.rs  mod.rs
backend/src/controllers/gpt/dtos/: assess_infringement_v1.rs  mod.rs
backend/src/controllers/gpt/pkgs/: asset_helper.rs  gpt_groq.rs  mod.rs
backend/src/controllers/root/: controller.rs  ctrl.rs
backend/src/controllers/root_v2/: ctrl.rs
backend/src/middlewares/: ctx.rs
backend/src/pkgs/: common.rs  ctx.rs  db_helper.rs  errors.rs  logging.rs  mod.rs  schema.rs  time.rs
backend/src/pkgs/dtos/: company.rs  infrigement.rs  mod.rs  patent.rs  patent_clam.rs  product.rs
backend/src/pkgs/models/: assessments.rs  mod.rs  test_log.rs
backend/src/pkgs/repos/: mod.rs
backend/src/pkgs/repos/assessment/: create.rs  get.rs
backend/src/pkgs/repos/test_log/: create.rs  list_all.rs  mod.rs
deployments/: docker-compose.yml
develop-gears/: docker-compose.yml
docs/: error.md  lifetime.md  macro.md
scripts/: be-format.sh  build-backend.sh  build-migration.sh  is-migrated.sh  migrate.sh  serve-backend.sh
