[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

[dependencies]
axum = "0.7.9"
chrono = "0.4.38"
diesel = { version = "2.2.4", features = ["r2d2", "postgres", "serde_json"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tower = { version = "0.5.1", features = ["timeout"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "ansi"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
